# ningxilai.github.io

./: 404.html  CNAME  README.md  SUMMARY.md.~1~  SUMMARY.md.~2~  _config.yml  about.html  about.markdown  about.md  about.rst  albumindex.html  archive.html  archive.md  blog.cabal  book.toml  contact.html  contact.markdown  contact.md  index.css  index.html  index.markdown  index.md  listings.json  print.html  read&comic index.html  search.json  searchindex.js  searchindex.json  site.hs  styles.css  toc.html  toc.js  writeindex.html
_posts/: 2024-12-29-Music-Theories.md  2024-12-29-Welcome.md  2024-12-29-note.md  2024-12-29-owl-like-a-writing-desk.md  2024-12-30-Triana,Night_of_the_Assasins-TransIntro.md  2024-12-30-Triana,Night_of_the_Assasins.md  2024-12-30-Triana,Night_of_the_Assasins.md.~1~  2025-01-16-late-january.md  2025-01-16.md.~1~  2025-02-01-february.md  2025-02-12.md  2025-02-13-Note.md  2025-02-13.md.~1~  2025-02-25-Song-List.md  2025-02-25.md.~1~  2025-03-01.md
_site/: about.html  archive.html  contact.html  index.html
css/: default.css  new.css  new.scss  style.css
docs/: CNAME
fonts/: fonts.css
js/: sidenotes.js
posts/: 2024-12-29-Music-Theories.html  2024-12-29-Music-Theories.md  2024-12-29-new-work-test.html  2024-12-29-note.html  2024-12-29-note.md  2024-12-29-owl-like-a-writing-desk.html  2024-12-29-owl-like-a-writing-desk.md  2024-12-30-Triana,Night-of-the-Assasins-TransIntro.html  2024-12-30-Triana,Night-of-the-Assasins.html  2024-12-30-Triana,Night_of_the_Assasins-TransIntro.html  2024-12-30-Triana,Night_of_the_Assasins-TransIntro.md  (+25 more)
(+107 files in other folders)
